[gd_scene load_steps=8 format=3 uid="uid://dvhabtk8hf3fi"]

[ext_resource type="Script" path="res://scripts/building.gd" id="1_xr7jb"]
[ext_resource type="Script" path="res://scripts/buildings/generic_tower.gd" id="2_b65io"]
[ext_resource type="Script" path="res://scripts/buildings/towers/slag_shooter.gd" id="3_7a827"]
[ext_resource type="Texture2D" uid="uid://dhjv6udmuj53l" path="res://sprites/buildings/tower_base.png" id="4_djh7p"]
[ext_resource type="Script" path="res://scripts/buildings/resource_container.gd" id="5_irn2g"]
[ext_resource type="Script" path="res://prefabs/buildings/path_trigger.gd" id="6_sixr2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_60yd6"]
radius = 225.009

[node name="slag_shooter" type="Node2D"]
script = ExtResource("1_xr7jb")

[node name="generic_building" type="Node2D" parent="."]
script = ExtResource("2_b65io")

[node name="specific_tower" type="Node2D" parent="generic_building"]
script = ExtResource("3_7a827")
footprint = Vector2i(2, 2)
shots_per_second = 1.0
targeting_range = 10.0
bullet_path = "res://prefabs/basic_bullet.tscn"
kinetic_power_mult = 1.0
bullet_split = 3
accuracy = 20.0

[node name="bullet_emitter" type="Node2D" parent="."]
position = Vector2(32, 32)

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(32, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_djh7p")

[node name="range" type="Area2D" parent="."]
position = Vector2(32, 32)

[node name="collision" type="CollisionShape2D" parent="range"]
shape = SubResource("CircleShape2D_60yd6")

[node name="bullet_container" type="Node2D" parent="."]

[node name="resource_container" type="Node2D" parent="."]
script = ExtResource("5_irn2g")

[node name="path_trigger" type="Node2D" parent="resource_container"]
script = ExtResource("6_sixr2")
